<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:padding="32dp">

    <View
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/floating_nav_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvMatchResultTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emoji_crown"
        android:textSize="60sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvMatchResultTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvMatchResultTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_match_result"
        android:textColor="@color/text_title"
        android:textSize="28sp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMatchScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_compatibility"
        android:textColor="@color/primary_accent"
        android:fontFamily="sans-serif-black"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvMatchResultTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnClaimCareer"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/btn_claim_destiny"
        android:backgroundTint="@color/primary_accent"
        android:fontFamily="sans-serif-black"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
